--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <p>Descubra técnicas de manicure, dicas de tendências, e cursos recomendados para aprimorar suas habilidades.</p>
         </div>
     </header>
-    <main>
+    <main class="main-blog">
         <section class="article-content">
             <article>
                 <h2>Como se tornar uma manicure profissional</h2>
@@ -120,6 +120,40 @@
                         <p class="article-date">Última atualização: 30/10/2024</p>
                         <p>O mercado de manicure e pedicure está em constante crescimento, sendo uma excelente oportunidade para quem deseja empreender ou <strong>se especializar na área da beleza</strong>. Neste guia, ...</p>
                         <a target="_blank" href="./pages/manicure-guia-completo.html" class="article-btn">Leia Mais</a>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+        <section class="article-content">
+            <article>
+                <h2>Melhores Cursos de Manicure Online</h2>
+
+                <div class="article-card-body">
+                    <div class="article-left">
+                        <a href="./pages/melhores-cursos-de-manicure-online.html" target="_blank">
+                            <img  
+                                src="./assets/images/desktop-1440/melhores-cursos-de-manicure-online-480-x-320.webp" 
+                                alt="Foto de uma manicure trabalhando, pintando as unhas da cliente." 
+                                srcset="
+                                ./assets/images/mobile-p/melhores-cursos-de-manicure-online-280-x-187.webp 320w, 
+                                ./assets/images/mobile-m/melhores-cursos-de-manicure-online-335-x-224.webp 375w, 
+                                ./assets/images/mobile-l/melhores-cursos-de-manicure-online-385-x-257.webp 425w, 
+                                ./assets/images/tablet/melhores-cursos-de-manicure-online-283-x-189.webp 768w, 
+                                ./assets/images/desktop-1024/melhores-cursos-de-manicure-online-314-x-209.webp 1024w, 
+                                ./assets/images/desktop-1440/melhores-cursos-de-manicure-online-480-x-320.webp 1440w"
+                                width="480" 
+                                height="320" 
+                                sizes="(max-width: 320px) 280px, (max-width: 375px) 335px, (max-width: 425px) 385px, (max-width: 768px) 283px, (max-width: 1024px) 314px, (max-width: 1440px) 480px"
+                                loading="lazy"
+                            />
+                        </a>
+                    </div>
+                    
+                    <div class="article-right">
+                        <p class="article-date">Última atualização: 10/11/2024</p>
+                        <p>Se você deseja aprender as habilidades necessárias para se tornar uma ótima manicure, esta revisão dos melhores cursos online de manicure e pedicure de 2024 é para você.</p>
+                        <a target="_blank" href="./pages/melhores-cursos-de-manicure-online.html" class="article-btn">Leia Mais</a>
                     </div>
                 </div>
             </article>
