:lipstick: feat: Adding responsive view of articles on blog page.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
         </div>
     </header>
     <main class="main-blog">
+
+        <p>Bem-vindo ao nosso blog dedicado ao universo da manicure e pedicure! Aqui, você encontrará tudo o que precisa para se destacar nessa profissão, desde dicas sobre técnicas inovadoras até tendências de mercado e recomendações dos melhores cursos disponíveis. Nosso conteúdo é pensado tanto para quem está começando quanto para profissionais que desejam se aprimorar.</p>
+
+        <p> Siga nossas publicações e eleve suas habilidades com informações atualizadas e insights valiosos para <strong>impulsionar sua carreira no setor de beleza</strong>.</p>
+
         <section class="article-content">
             <article>
                 <h2>Como se tornar uma manicure profissional</h2>
@@ -123,9 +128,7 @@
                     </div>
                 </div>
             </article>
-        </section>
 
-        <section class="article-content">
             <article>
                 <h2>Melhores Cursos de Manicure Online</h2>
 
