:sparkles: feat: Adding Share Button Functionality.

--- a/pages/melhores-cursos-de-manicure-online.html
+++ b/pages/melhores-cursos-de-manicure-online.html
@@ -930,6 +930,23 @@
         <section id="conclusao">
             <h4>Conclusão</h4>
             <p>No geral, os cursos de manicure online se destacam porque você tem a chance de aprender não apenas em uma aula, mas quantas quiser a partir dos ensinamentos e técnicas passadas pelas instrutoras. Assim, se você deseja aprender sobre <strong>designer de unhas</strong> online, não faltam opções. Desta forma, então esperamos de coração que este artigo tenha ajudado você a descobrir qual curso online de manicure e designer de unhas é o ideal para você!</p>
+
+            <p><b>Compartilhe!</b></p>
+
+            <div class="compartilhamento">
+                <a id="facebook-share" href="https://www.facebook.com/sharer/sharer.php?u=https://seusite.com" target="_blank">
+                    <img src="../assets/icons/facebook.webp" width="64" height="64" alt="Botão de compartilhamento para o Facebook." />
+                </a>
+                <a id="whatsapp-share" href="https://api.whatsapp.com/send?text=Confira%20este%20artigo!%20https://seusite.com" target="_blank">
+                    <img src="../assets/icons/whatsapp.webp" width="64" height="64" alt="Botão de compartilhamento para o WhatsApp." />
+                </a>
+                <a id="twitter-share" href="https://twitter.com/intent/tweet?url=https://seusite.com&text=Confira este artigo!" target="_blank">
+                    <img src="../assets/icons/twitter.webp" width="64" height="64" alt="Botão de compartilhamento para o Twitter." />
+                </a>
+                <a id="pinterest-share" href="https://pinterest.com/pin/create/button/?url=https://melhorescursosdemanicureonline.vercel.app/pages/melhores-cursos-de-manicure-online.html&media=https://melhorescursosdemanicureonline.vercel.app/assets/images/desktop-1440/melhores-cursos-de-manicure-online-480-x-320.webp&description=Se você deseja aprender as habilidades necessárias para se tornar uma ótima manicure, esta revisão dos melhores cursos online de manicure e pedicure de 2024 é para você." target="_blank">
+                    <img src="../assets/icons/pinterest.webp" width="64" height="64" alt="Botão de compartilhamento para o Pinterest." />
+                </a>
+            </div>
         </section>
 
         <section id="faq">
