:recycle: refactor: update relative paths to absolute from root.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/icons/logo-manicure-45-x-45.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/icons/logo-manicure-45-x-45.webp" type="image/x-icon">
 
     <title>Blog de Manicure e Pedicure | Dicas, Cursos e Tendências para Profissionais</title>
     
@@ -36,13 +36,13 @@
     <meta property="twitter:description" content="Explore o blog completo de manicure e pedicure com artigos, dicas e tendências. Aprenda técnicas, descubra cursos recomendados e aprimore suas habilidades para crescer na área da beleza. Acesse agora e encontre o conteúdo perfeito para você!">
     <meta property="twitter:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp">
 
-    <link rel="preload" href="../assets/images/desktop-1440/img-nails-banner.webp" as="image" type="image/webp">
-    <link rel="preload" href="./styles/styles.css" as="style">
-    <link rel="preload" href="./styles/articles.css" as="style">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="./styles/articles.css">
-    <noscript><link rel="stylesheet" href="./styles/styles.css"></noscript>
-    <noscript><link rel="stylesheet" href="./styles/articles.css"></noscript>
+    <link rel="preload" href="/assets/images/desktop-1440/img-nails-banner.webp" as="image" type="image/webp">
+    <link rel="preload" href="/styles/styles.css" as="style">
+    <link rel="preload" href="/styles/articles.css" as="style">
+    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles/articles.css">
+    <noscript><link rel="stylesheet" href="/styles/styles.css"></noscript>
+    <noscript><link rel="stylesheet" href="/styles/articles.css"></noscript>
 </head>
 <body>
     <header>
@@ -51,7 +51,7 @@
         <nav id="sidebar-menu">
             <ul>
                 <li><a href="#inicio">Início</a></li>
-                <li><a href="./index.html">Cursos</a></li>
+                <li><a href="/index.html">Cursos</a></li>
                 <li><a href="#vantagens">Vantagens</a></li>
                 <li><a href="#conclusao">Conclusão</a></li>
                 <li><a href="#faq">Perguntas Frequentes</a></li>
@@ -61,27 +61,27 @@
         <nav id="menu">
             <ul>
                 <li>
-                    <a id="logo-menu" href="../index.html">
+                    <a id="logo-menu" href="/index.html">
                         <img 
                             width="45" 
                             height="45"
-                            src="../assets/icons/logo-manicure-45-x-45.webp" 
+                            src="/assets/icons/logo-manicure-45-x-45.webp" 
                             alt="Logomarca do website. Um circulo rosa claro com três unhas feitas em um rosa mais escuro."
                         />
                     </a>
                 </li>
                 
                 <li class="has-submenu">
-                    <a href="./index.html" aria-haspopup="true" aria-expanded="false">Cursos</a>
+                    <a href="/index.html" aria-haspopup="true" aria-expanded="false">Cursos</a>
                     <ul class="submenu">
-                        <li><a href="./pages/melhores-cursos-de-manicure-online.html">Melhores Cursos de Manicure Online</a></li>
-                        <li><a href="./manicure-guia-completo.html">Como se tornar uma manicure profissional</a></li>
+                        <li><a href="/pages/melhores-cursos-de-manicure-online.html">Melhores Cursos de Manicure Online</a></li>
+                        <li><a href="/pages/manicure-guia-completo.html">Como se tornar uma manicure profissional</a></li>
                     </ul>
                 </li>
 
-                <li><a href="./index.html#vantagens">Vantagens</a></li>
-                <li><a href="./index.html#conclusao">Conclusão</a></li>
-                <li><a href="./index.html#faq">Perguntas Frequentes</a></li>
+                <li><a href="/index.html#vantagens">Vantagens</a></li>
+                <li><a href="/index.html#conclusao">Conclusão</a></li>
+                <li><a href="/index.html#faq">Perguntas Frequentes</a></li>
             </ul>
         </nav>
 
@@ -102,17 +102,17 @@
 
                 <div class="article-card-body">
                     <div class="article-left">
-                        <a href="./pages/manicure-guia-completo.html" target="_blank">
+                        <a href="/pages/manicure-guia-completo.html" target="_blank">
                             <img  
-                                src="./assets/images/desktop-1440/o-que-faz-uma-manicure-e-pedicure-480-x-320.webp" 
+                                src="/assets/images/desktop-1440/o-que-faz-uma-manicure-e-pedicure-480-x-320.webp" 
                                 alt="Foto de um procedimento de manicure, focando nas mãos da cliente." 
                                 srcset="
-                                ./assets/images/mobile-p/o-que-faz-uma-manicure-e-pedicure-280-x-187.webp 320w, 
-                                ./assets/images/mobile-m/o-que-faz-uma-manicure-e-pedicure-335-x-224.webp 375w, 
-                                ./assets/images/mobile-l/o-que-faz-uma-manicure-e-pedicure-385-x-257.webp 425w, 
-                                ./assets/images/tablet/o-que-faz-uma-manicure-e-pedicure-283-x-189.webp 768w, 
-                                ./assets/images/desktop-1024/o-que-faz-uma-manicure-e-pedicure-314-x-209.webp 1024w, 
-                                ./assets/images/desktop-1440/o-que-faz-uma-manicure-e-pedicure-480-x-320.webp 1440w"
+                                /assets/images/mobile-p/o-que-faz-uma-manicure-e-pedicure-280-x-187.webp 320w, 
+                                /assets/images/mobile-m/o-que-faz-uma-manicure-e-pedicure-335-x-224.webp 375w, 
+                                /assets/images/mobile-l/o-que-faz-uma-manicure-e-pedicure-385-x-257.webp 425w, 
+                                /assets/images/tablet/o-que-faz-uma-manicure-e-pedicure-283-x-189.webp 768w, 
+                                /assets/images/desktop-1024/o-que-faz-uma-manicure-e-pedicure-314-x-209.webp 1024w, 
+                                /assets/images/desktop-1440/o-que-faz-uma-manicure-e-pedicure-480-x-320.webp 1440w"
                                 width="480" 
                                 height="320" 
                                 sizes="(max-width: 320px) 280px, (max-width: 375px) 335px, (max-width: 425px) 385px, (max-width: 768px) 283px, (max-width: 1024px) 314px, (max-width: 1440px) 480px"
@@ -124,7 +124,7 @@
                     <div class="article-right">
                         <p class="article-date">Última atualização: 30/10/2024</p>
                         <p>O mercado de manicure e pedicure está em constante crescimento, sendo uma excelente oportunidade para quem deseja empreender ou <strong>se especializar na área da beleza</strong>. Neste guia, ...</p>
-                        <a target="_blank" href="./pages/manicure-guia-completo.html" class="article-btn">Leia Mais</a>
+                        <a target="_blank" href="/pages/manicure-guia-completo.html" class="article-btn">Leia Mais</a>
                     </div>
                 </div>
             </article>
@@ -134,17 +134,17 @@
 
                 <div class="article-card-body">
                     <div class="article-left">
-                        <a href="./pages/melhores-cursos-de-manicure-online.html" target="_blank">
+                        <a href="/pages/melhores-cursos-de-manicure-online.html" target="_blank">
                             <img  
-                                src="./assets/images/desktop-1440/melhores-cursos-de-manicure-online-480-x-320.webp" 
+                                src="/assets/images/desktop-1440/melhores-cursos-de-manicure-online-480-x-320.webp" 
                                 alt="Foto de uma manicure trabalhando, pintando as unhas da cliente." 
                                 srcset="
-                                ./assets/images/mobile-p/melhores-cursos-de-manicure-online-280-x-187.webp 320w, 
-                                ./assets/images/mobile-m/melhores-cursos-de-manicure-online-335-x-224.webp 375w, 
-                                ./assets/images/mobile-l/melhores-cursos-de-manicure-online-385-x-257.webp 425w, 
-                                ./assets/images/tablet/melhores-cursos-de-manicure-online-283-x-189.webp 768w, 
-                                ./assets/images/desktop-1024/melhores-cursos-de-manicure-online-314-x-209.webp 1024w, 
-                                ./assets/images/desktop-1440/melhores-cursos-de-manicure-online-480-x-320.webp 1440w"
+                                /assets/images/mobile-p/melhores-cursos-de-manicure-online-280-x-187.webp 320w, 
+                                /assets/images/mobile-m/melhores-cursos-de-manicure-online-335-x-224.webp 375w, 
+                                /assets/images/mobile-l/melhores-cursos-de-manicure-online-385-x-257.webp 425w, 
+                                /assets/images/tablet/melhores-cursos-de-manicure-online-283-x-189.webp 768w, 
+                                /assets/images/desktop-1024/melhores-cursos-de-manicure-online-314-x-209.webp 1024w, 
+                                /assets/images/desktop-1440/melhores-cursos-de-manicure-online-480-x-320.webp 1440w"
                                 width="480" 
                                 height="320" 
                                 sizes="(max-width: 320px) 280px, (max-width: 375px) 335px, (max-width: 425px) 385px, (max-width: 768px) 283px, (max-width: 1024px) 314px, (max-width: 1440px) 480px"
@@ -156,7 +156,7 @@
                     <div class="article-right">
                         <p class="article-date">Última atualização: 10/11/2024</p>
                         <p>Se você deseja aprender as habilidades necessárias para se tornar uma ótima manicure, esta revisão dos melhores cursos online de manicure e pedicure de 2024 é para você.</p>
-                        <a target="_blank" href="./pages/melhores-cursos-de-manicure-online.html" class="article-btn">Leia Mais</a>
+                        <a target="_blank" href="/pages/melhores-cursos-de-manicure-online.html" class="article-btn">Leia Mais</a>
                     </div>
                 </div>
             </article>
@@ -165,6 +165,6 @@
     <footer>
         <p>© <span id="ano-frase"></span>. melhorescursosdemanicureonline.vercel.app. Todos os direitos reservados.</p>
     </footer>
-    <script src="./js/scripts.js" defer></script>
+    <script src="/js/scripts.js" defer></script>
 </body>
 </html>
