:wrench: chore: change to the canonical url declared by google.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="robots" content="index, follow">
 
     <meta name="author" content="Davi Teixeira Silva"/>
-    <link rel="canonical" href="https://melhorescursosdemanicureonline.vercel.app/index.html" />
+    <link rel="canonical" href="https://melhorescursosdemanicureonline.vercel.app/" />
     <meta name="keywords" content="manicure, como ser uma manicure, melhores cursos de manicure online, curso de manicure certificado, como ser manicure, escola de manicure, aprender manicure, curso de manicure e pedicure, designer de unhas, curso faby cardoso, cutilagem russa, unhas de gel, unhas decoradas, manicure profissional, técnicas de manicure, curso de manicure online gratuito"/>
     <meta name="description" content="Explore o blog completo de manicure e pedicure com artigos, dicas e tendências. Aprenda técnicas, descubra cursos recomendados e aprimore suas habilidades para crescer na área da beleza. Acesse agora e encontre o conteúdo perfeito para você!"/>
     
