--- a/pages/manicure-guia-completo.html
+++ b/pages/manicure-guia-completo.html
@@ -18,7 +18,7 @@
     <meta name="robots" content="index, follow">
 
     <meta name="author" content="Davi Teixeira Silva"/>
-    <link rel="canonical" href="https://melhorescursosdemanicureonline.vercel.app/pages/manicure-guia-completo.html/" />
+    <link rel="canonical" href="https://melhorescursosdemanicureonline.vercel.app/pages/manicure-guia-completo.html" />
     <meta name="keywords" content="manicure, como ser uma manicure, melhores cursos de manicure online, curso de manicure certificado, como ser manicure, escola de manicure, aprender manicure, curso de manicure e pedicure, designer de unhas, curso faby cardoso, cutilagem russa, unhas de gel, unhas decoradas, manicure profissional, técnicas de manicure, curso de manicure online gratuito"/>
     <meta name="description" content="Descubra tudo sobre a profissão de manicure e pedicure: habilidades essenciais, mercado de trabalho, ferramentas, técnicas populares e dicas para se destacar na área. Aprenda como se tornar uma profissional de sucesso com cursos online e aproveite nossas recomendações para começar sua carreira com o pé direito."/>
     
