:wrench: chore: Changing the canonical tag to add the trailing slash.

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://melhorescursosdemanicureonline.vercel.app/index.html">
+    <meta property="og:url" content="https://melhorescursosdemanicureonline.vercel.app/">
     <meta property="og:title" content="Blog de Manicure e Pedicure | Dicas, Cursos e Tendências para Profissionais">
     <meta property="og:description" content="Explore o blog completo de manicure e pedicure com artigos, dicas e tendências. Aprenda técnicas, descubra cursos recomendados e aprimore suas habilidades para crescer na área da beleza. Acesse agora e encontre o conteúdo perfeito para você!">
     <meta property="og:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://melhorescursosdemanicureonline.vercel.app/index.html">
+    <meta property="twitter:url" content="https://melhorescursosdemanicureonline.vercel.app/">
     <meta property="twitter:title" content="Blog de Manicure e Pedicure | Dicas, Cursos e Tendências para Profissionais">
     <meta property="twitter:description" content="Explore o blog completo de manicure e pedicure com artigos, dicas e tendências. Aprenda técnicas, descubra cursos recomendados e aprimore suas habilidades para crescer na área da beleza. Acesse agora e encontre o conteúdo perfeito para você!">
     <meta property="twitter:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp">
