--- a/pages/manicure-guia-completo.html
+++ b/pages/manicure-guia-completo.html
@@ -18,20 +18,20 @@
     <meta name="robots" content="index, follow">
 
     <meta name="author" content="Davi Teixeira Silva"/>
-    <link rel="canonical" href="https://melhorescursosdemanicureonline.vercel.app/pages/manicure-guia-completo.html" />
+    <link rel="canonical" href="https://melhorescursosdemanicureonline.vercel.app/pages/manicure-guia-completo.html/" />
     <meta name="keywords" content="manicure, como ser uma manicure, melhores cursos de manicure online, curso de manicure certificado, como ser manicure, escola de manicure, aprender manicure, curso de manicure e pedicure, designer de unhas, curso faby cardoso, cutilagem russa, unhas de gel, unhas decoradas, manicure profissional, técnicas de manicure, curso de manicure online gratuito"/>
     <meta name="description" content="Descubra tudo sobre a profissão de manicure e pedicure: habilidades essenciais, mercado de trabalho, ferramentas, técnicas populares e dicas para se destacar na área. Aprenda como se tornar uma profissional de sucesso com cursos online e aproveite nossas recomendações para começar sua carreira com o pé direito."/>
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/manicure-guia-completo.html">
+    <meta property="og:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/manicure-guia-completo.html/">
     <meta property="og:title" content="Como se tornar uma manicure profissional: Guia completo para quem quer atuar na área">
     <meta property="og:description" content="Descubra tudo sobre a profissão de manicure e pedicure: habilidades essenciais, mercado de trabalho, ferramentas, técnicas populares e dicas para se destacar na área. Aprenda como se tornar uma profissional de sucesso com cursos online e aproveite nossas recomendações para começar sua carreira com o pé direito.">
     <meta property="og:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/manicure-guia-completo.html">
+    <meta property="twitter:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/manicure-guia-completo.html/">
     <meta property="twitter:title" content="Como se tornar uma manicure profissional: Guia completo para quem quer atuar na área">
     <meta property="twitter:description" content="Descubra tudo sobre a profissão de manicure e pedicure: habilidades essenciais, mercado de trabalho, ferramentas, técnicas populares e dicas para se destacar na área. Aprenda como se tornar uma profissional de sucesso com cursos online e aproveite nossas recomendações para começar sua carreira com o pé direito.">
     <meta property="twitter:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp">
