--- a/pages/melhores-cursos-de-manicure-online.html
+++ b/pages/melhores-cursos-de-manicure-online.html
@@ -388,20 +388,20 @@
     <meta name="robots" content="index, follow" />
     
     <meta name="author" content="Davi Teixeira Silva" />
-    <link rel="canonical" href="https://melhorescursosdemanicureonline.vercel.app/pages/melhores-cursos-de-manicure-online.html" />
+    <link rel="canonical" href="https://melhorescursosdemanicureonline.vercel.app/pages/melhores-cursos-de-manicure-online.html/" />
     <meta name="keywords" content="melhores cursos de manicure online, curso de manicure certificado, como ser manicure, escola de manicure, aprender manicure, curso de manicure e pedicure, designer de unhas, curso faby cardoso, cutilagem russa, unhas de gel, unhas decoradas, manicure profissional, técnicas de manicure, curso de manicure online gratuito" />
     <meta name="description" content="Descubra os melhores cursos de manicure online com certificação. Aprenda técnicas profissionais e segredos para se destacar na área. Inscreva-se agora e transforme sua carreira!" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/melhores-cursos-de-manicure-online.html" />
+    <meta property="og:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/melhores-cursos-de-manicure-online.html/" />
     <meta property="og:title" content="Os Melhores Cursos de Manicure Online | Aprenda com Certificação" />
     <meta property="og:description" content="Descubra os melhores cursos de manicure online com certificação. Aprenda técnicas profissionais e segredos para se destacar na área. Inscreva-se agora e transforme sua carreira!" />
     <meta property="og:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/melhores-cursos-de-manicure-online.html" />
+    <meta property="twitter:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/melhores-cursos-de-manicure-online.html/" />
     <meta property="twitter:title" content="Os Melhores Cursos de Manicure Online | Aprenda com Certificação" />
     <meta property="twitter:description" content="Descubra os melhores cursos de manicure online com certificação. Aprenda técnicas profissionais e segredos para se destacar na área. Inscreva-se agora e transforme sua carreira!" />
     <meta property="twitter:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp" />
