:wrench: chore: Changing the title of the page.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/assets/icons/logo-manicure-45-x-45.webp" type="image/x-icon">
 
-    <title>Blog de Manicure e Pedicure | Dicas, Cursos e Tendências para Profissionais</title>
+    <title>Blog Manicure e Pedicure - Dicas, Cursos e Tendências para Profissionais</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,14 +25,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://melhorescursosdemanicureonline.vercel.app/">
-    <meta property="og:title" content="Blog de Manicure e Pedicure | Dicas, Cursos e Tendências para Profissionais">
+    <meta property="og:title" content="Blog Manicure e Pedicure - Dicas, Cursos e Tendências para Profissionais">
     <meta property="og:description" content="Explore o blog completo de manicure e pedicure com artigos, dicas e tendências. Aprenda técnicas, descubra cursos recomendados e aprimore suas habilidades para crescer na área da beleza. Acesse agora e encontre o conteúdo perfeito para você!">
     <meta property="og:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://melhorescursosdemanicureonline.vercel.app/">
-    <meta property="twitter:title" content="Blog de Manicure e Pedicure | Dicas, Cursos e Tendências para Profissionais">
+    <meta property="twitter:title" content="Blog Manicure e Pedicure - Dicas, Cursos e Tendências para Profissionais">
     <meta property="twitter:description" content="Explore o blog completo de manicure e pedicure com artigos, dicas e tendências. Aprenda técnicas, descubra cursos recomendados e aprimore suas habilidades para crescer na área da beleza. Acesse agora e encontre o conteúdo perfeito para você!">
     <meta property="twitter:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp">
 
