--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </section>
 
             <aside>
-                <div>
+                <div class="about-persona">
                     <h3>Aline Souza</h3>
                 </div>
 
@@ -183,6 +183,25 @@
                     Blog nasceu em 2024 com a ideia de compartilhar dicas, inspirações e cuidados para manter 
                     suas unhas sempre lindas e saudáveis.
                 </p>
+
+                <div class="aside-share">
+                    <h4>Compartilhe</h4>
+                </div>
+
+                <div class="compartilhamento">
+                    <a target="_blank" id="facebook-share" href="https://www.facebook.com/sharer/sharer.php?u=https://melhorescursosdemanicureonline.vercel.app">
+                        <img width="64" height="64" src="/assets/icons/facebook.webp" alt="Botão de compartilhamento para o Facebook." />
+                    </a>
+                    <a target="_blank" id="whatsapp-share" href="https://api.whatsapp.com/send?text=Confira%20este%20blog!%20https://melhorescursosdemanicureonline.vercel.app">
+                        <img width="64" height="64" src="/assets/icons/whatsapp.webp" alt="Botão de compartilhamento para o WhatsApp." />
+                    </a>
+                    <a target="_blank" id="twitter-share" href="https://twitter.com/intent/tweet?url=https://https://melhorescursosdemanicureonline.vercel.app&text=Confira este Blog de manicure e pedicure!">
+                        <img width="64" height="64" alt="Botão de compartilhamento para o Twitter." src="/assets/icons/twitter.webp" />
+                    </a>
+                    <a target="_blank" id="pinterest-share" href="https://pinterest.com/pin/create/button/?url=https://melhorescursosdemanicureonline.vercel.app&media=https://melhorescursosdemanicureonline.vercel.app/assets/images/desktop-1440/melhores-cursos-de-manicure-online-480-x-320.webp&description=Se você deseja aprender as habilidades necessárias para se tornar uma ótima manicure, este é o melhor blog online de manicure e pedicure para você.">
+                        <img width="64" height="64" alt="Botão de compartilhamento para o Pinterest." src="/assets/icons/pinterest.webp" />
+                    </a>
+                </div>
             </aside>
         </div>
 
