:wrench: chore: Update the import css file.

--- a/pages/melhores-cursos-de-manicure-online.html
+++ b/pages/melhores-cursos-de-manicure-online.html
@@ -407,9 +407,10 @@
     <meta property="twitter:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp" />
     
     <link rel="preload" href="/assets/images/desktop-1440/img-nails-banner.webp" as="image" type="image/webp" />
-    <link rel="preload" href="/styles/styles.css" as="style" />
-    <link rel="stylesheet" href="/styles/styles.css" />
-    <noscript><link rel="stylesheet" href="/styles/styles.css" /></noscript>
+    
+    <link rel="preload" href="/styles/styles.css" as="style">
+    <link rel="stylesheet" href="/styles/styles.css">
+    <noscript><link rel="stylesheet" href="/styles/styles.css"></noscript>
 </head>
 <body>
     <header>
